Implementado controle de acesso utilizando Keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8081
+
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.realm=mentorama-college
+keycloak.resource=mod-08-atividade
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
